--- a/my-index.html
+++ b/my-index.html
@@ -592,6 +592,54 @@
                   <a href="my-insurances.html" class="columns small-12 medium-6 large-4 widget-box ins">
                     <div class="widget-box__title">Страховi випадки</div>
                   </a>
+                  <div class="columns small-12 visible-xs index-agent-margin">
+                    <div class="contact-box department_wrap left-space">
+    <div id="customer-content" class="content mainColor50 my-agent" style="display: block;">
+        <div class="my-agent-title">
+            <div class="my-agent-title__agent-img">
+              <img src="images/_support.jpg" width="120">
+            </div>
+            <div class="my-agent-title__agent">Персональный менеджер</div>
+        </div>
+        <div class="my-agent-name">&#10095; Мартиненко Марина</div>
+        <div class="my-agent-position">Головний агент</div>
+        <div class="my-agent-contacts">
+            <p>t: +40 21 410 2111</p>
+            <p>e: firstname.lastname@gmail.com</p>
+        </div>
+    </div>
+
+    <div id="advisor-content" class="content visible mainColor50 w_call normal-height" style="display: none;">
+        <h3>Заказать звонок от УНИКА</h3>
+        <p>Мы Вам перезвоним:</p>
+        <div class="first_step">
+            <form name="CBForm" method="POST" action="https://uniqa.ua/case/" id="call_you" novalidate="novalidate">
+                <p><input type="text" name="callback_phone" id="lead_nume" placeholder="Контактный телефон" class="required input_phone" aria-required="true"></p>
+                <div class="normal-height">
+                    <input id="call_btn" class="button_submit" type="submit" value="Жду звонка">
+                </div>
+            </form>
+        </div>
+    </div>
+    <ul class="tabs tabs2 cf">
+        <li><!--noindex-->
+            <a id="customer" rel="nofollow" href="javascript:void(0)" class="selected">
+                <i></i>
+                <span>Мій агент</span>
+            </a>
+            <!--/noindex-->
+        </li>
+        <li><!--noindex-->
+            <a id="advisor" rel="nofollow" href="javascript:void(0)">
+                <i></i>
+                <span>Пiдтримка</span>
+            </a>
+            <!--/noindex-->
+        </li>
+    </ul>
+</div>
+
+                  </div>
                   <div class="columns small-12 medium-12 large-4 widget-box identify my-uniqa-personal-details">
                       <div class="widget-wrapper">
                         <div class="identify__title">Персональнi даннi</div>
@@ -699,7 +747,7 @@
                           <div class="widget-blue-box__message">специфльні пропозіції для vip кліентів.</div>
                         </div>
                     </div>
-                    <div class="column small-12 medium-4 large-12 contact-box department_wrap">
+                    <div class="hidden-xs"><div class="column small-12 medium-4 large-12 contact-box department_wrap">
     <div id="customer-content" class="content mainColor50" style="display: block;">
         <h3>Звертайтесь до нас</h3>
 
@@ -784,7 +832,7 @@
     </ul>
 
 </div>
-
+</div>
                     <div class="column small-12 medium-4 large-12 widget-blue-box">
                       <div class="widget-wrapper">
                           <div class="widget-blue-box__header">Платежi онлайн</div>
