--- a/my-login-2.html
+++ b/my-login-2.html
@@ -582,12 +582,24 @@
               <div class="column small-1"><em class="icon icon-state-def"></em></div>
           </div>
           <div class="u-fields flx-row">
-            <div class="column small-6">
+            <div class="column small-6 hidden-xs">
                 <a href="my-registration-2.html" class="login-deck__link">Реєстрація</a>
                 <a href="my-forgot-password.html" class="login-deck__link">Забули пароль?</a>
             </div>
-            <div class="column small-6 text-align-right">
+            <div class="column small-12 medium-6 text-align-right">
                 <a href="index.html" class="u-btn primary is--large">Вхiд</a>
+            </div>
+          </div>
+
+          <div class="u-fields--double flx-row visible-xs">
+            <div class="column text-align-center">
+                <a href="my-forgot-password.html" class="login-deck__link">Забули пароль?</a>
+            </div>
+          </div>
+
+          <div class="u-fields flx-row visible-xs">
+            <div class="column">
+                <a href="index.html" class="u-btn secondary is--large">Реєстрація</a>
             </div>
           </div>
       </form>
