--- a/my-registration-2.html
+++ b/my-registration-2.html
@@ -591,7 +591,7 @@
                       Пароль не може бути меншим за 6 символів, та повинен включати як мінімум один символ верхнього регістру (лише латиницею) та одну цифру
                     </span>
                 </div>
-                <div class="column small-1"><em class="icon icon-state-def"></em></div>
+                <div class="column small-1 align-top"><em class="icon icon-state-def"></em></div>
             </div>
             <div class="u-fields flx-row align-middle">
                 <div class="column small-11">
