--- a/my-login-2.html
+++ b/my-login-2.html
@@ -587,7 +587,7 @@
                 <a href="my-forgot-password.html" class="login-deck__link">Забули пароль?</a>
             </div>
             <div class="column small-12 medium-6 text-align-right">
-                <a href="index.html" class="u-btn primary is--large">Вхiд</a>
+                <button type="submit" class="u-btn primary is--large">Вхiд</button>
             </div>
           </div>
 
@@ -599,7 +599,7 @@
 
           <div class="u-fields flx-row visible-xs">
             <div class="column">
-                <a href="index.html" class="u-btn secondary is--large">Реєстрація</a>
+                <button type="submit" class="u-btn secondary is--large">Реєстрація</button>
             </div>
           </div>
       </form>
