fix ipad and edge

--- a/my-index.html
+++ b/my-index.html
@@ -747,7 +747,7 @@
                           <div class="widget-blue-box__message">специфльні пропозіції для vip кліентів.</div>
                         </div>
                     </div>
-                    <div class="hidden-xs"><div class="column small-12 medium-4 large-12 contact-box department_wrap">
+                    <div class="column small-12 medium-4 large-12 contact-box department_wrap">
     <div id="customer-content" class="content mainColor50" style="display: block;">
         <h3>Звертайтесь до нас</h3>
 
@@ -832,7 +832,7 @@
     </ul>
 
 </div>
-</div>
+
                     <div class="column small-12 medium-4 large-12 widget-blue-box">
                       <div class="widget-wrapper">
                           <div class="widget-blue-box__header">Платежi онлайн</div>
