--- a/my-index.html
+++ b/my-index.html
@@ -747,7 +747,7 @@
                           <div class="widget-blue-box__message">специфльні пропозіції для vip кліентів.</div>
                         </div>
                     </div>
-                    <div class="column small-12 medium-4 large-12 contact-box department_wrap">
+                    <div class="column small-12 medium-4 large-12 contact-box department_wrap hidden-xs">
     <div id="customer-content" class="content mainColor50" style="display: block;">
         <h3>Звертайтесь до нас</h3>
 
@@ -768,9 +768,6 @@
             </a>
         </div>
     </div>
-    <!---------------------->
-
-
     <div id="branch-content" class="content mainColor50" style="display: none;">
         <h3 style="overflow:hidden;" title="Cea mai apropiata sucursala">
             Найближчий офіс
