--- a/my-insurances-item.html
+++ b/my-insurances-item.html
@@ -589,6 +589,14 @@
 
     <div class="flx-row">
         <div class="column small-12 medium-12 large-9">
+             <ul class="step-slider">
+    <li class="is-active"><div class="step-slider__number">1</div><div class="step-slider__text hidden-xs">Зареєстровано</div></li>
+    <li><div class="step-slider__number">2</div><div class="step-slider__text hidden-xs">Збір документів</div></li>
+    <li><div class="step-slider__number">3</div><div class="step-slider__text hidden-xs">Прийняття рішення</div></li>
+    <li><div class="step-slider__number">4</div><div class="step-slider__text hidden-xs">Рішення прийнято</div></li>
+    <li><div class="step-slider__number">5</div><div class="step-slider__text hidden-xs">Врегульовано</div></li>
+</ul>
+
             <div class="document-view">
     <div class="document-view__header">ДТП автомобіля BMW X6</div>
     <div class="flx-row">
